--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,8 @@
         <lucene.version>5.0.0</lucene.version>
         <lucene.maven.version>5.0.0-snapshot-1644303</lucene.maven.version>
         <jackson.version>2.4.2</jackson.version>
+        <slf4j.version>1.6.2</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
 
         <!-- Test properties -->
         <tests.jvms>auto</tests.jvms>
@@ -358,21 +360,28 @@
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
-                <version>1.2.17</version>
+                <version>${log4j.version}</version>
                 <optional>true</optional>
             </dependency>
 
             <dependency>
                 <groupId>log4j</groupId>
                 <artifactId>apache-log4j-extras</artifactId>
-                <version>1.2.17</version>
+                <version>${log4j.version}</version>
                 <optional>true</optional>
             </dependency>
 
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
-                <version>1.6.2</version>
+                <version>${slf4j.version}</version>
+                <optional>true</optional>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
                 <optional>true</optional>
             </dependency>
 
