--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>org.elasticsearch</groupId>
     <artifactId>elasticsearch-parent</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.5.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Elasticsearch Parent POM</name>
     <description>Elasticsearch - Open Source, Distributed, RESTful Search Engine</description>
@@ -33,11 +33,11 @@
 
     <properties>
         <!-- elasticsearch stack -->
-        <elasticsearch.version>2.0.0-SNAPSHOT</elasticsearch.version>
+        <elasticsearch.version>1.5.0-SNAPSHOT</elasticsearch.version>
 
         <!-- libraries -->
-        <lucene.version>5.0.0</lucene.version>
-        <lucene.maven.version>5.0.0-snapshot-1646179</lucene.maven.version>
+        <lucene.version>4.10.3</lucene.version>
+        <lucene.maven.version>4.10.3</lucene.maven.version>
         <jackson.version>2.4.2</jackson.version>
         <slf4j.version>1.6.2</slf4j.version>
         <log4j.version>1.2.17</log4j.version>
