--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <properties>
         <!-- elasticsearch stack -->
-        <elasticsearch.version>1.5.0-SNAPSHOT</elasticsearch.version>
+        <elasticsearch.version>1.5.0</elasticsearch.version>
 
         <!-- libraries -->
         <lucene.version>4.10.4</lucene.version>
