--- a/pom.xml
+++ b/pom.xml
@@ -4,19 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.elasticsearch</groupId>
+    <artifactId>elasticsearch-parent</artifactId>
+    <version>1.6.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <name>Elasticsearch Parent POM</name>
+    <description>Elasticsearch Parent POM</description>
+    <inceptionYear>2009</inceptionYear>
+
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
         <version>7</version>
     </parent>
 
-    <groupId>org.elasticsearch</groupId>
-    <artifactId>elasticsearch-parent</artifactId>
-    <version>1.6.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <name>Elasticsearch Parent POM</name>
-    <description>Elasticsearch - Open Source, Distributed, RESTful Search Engine</description>
-    <inceptionYear>2009</inceptionYear>
     <licenses>
         <license>
             <name>The Apache Software License, Version 2.0</name>
