--- a/pom.xml
+++ b/pom.xml
@@ -548,6 +548,7 @@
                                     <param>-Xmx${tests.heap.size}</param>
                                     <param>-Xms${tests.heap.size}</param>
                                     <param>-XX:MaxPermSize=128m</param>
+                                    <param>-Djava.library.path=${project.basedir}/lib/sigar</param>
                                     <param>-XX:MaxDirectMemorySize=512m</param>
                                     <param>-Des.logger.prefix=</param>
                                     <param>-XX:+HeapDumpOnOutOfMemoryError</param>
