--- a/pom.xml
+++ b/pom.xml
@@ -598,6 +598,8 @@
                                     <tests.version>${elasticsearch.version}</tests.version>
                                     <tests.locale>${tests.locale}</tests.locale>
                                     <tests.timezone>${tests.timezone}</tests.timezone>
+                                    <project.basedir>${project.basedir}</project.basedir>
+                                    <m2.repository>${settings.localRepository}</m2.repository>
                                     <es.node.local>${env.ES_TEST_LOCAL}</es.node.local>
                                     <es.node.mode>${es.node.mode}</es.node.mode>
                                     <es.logger.level>${es.logger.level}</es.logger.level>
