Add maven-invoker-plugin to 1.10
```xml
<plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-invoker-plugin</artifactId>
 <version>1.10</version>
</plugin>
```

Release Notes - Maven Invoker Plugin - Version 1.10

** Bug **

   * [MINVOKER-155] - Invoker plugin does not allow multiple environment variables to be set
   * [MINVOKER-176] - Update to plexus-interpolation 1.21 for thread safety issues
   * [MINVOKER-183] - IT failing when path contains accents
   * [MINVOKER-185] - Cannot run invoker ITs on Windows with Maven 3.3.1

** Improvement **

   * [MINVOKER-170] - Better document the usage of options for Maven
   * [MINVOKER-175] - Fix RAT Report
   * [MINVOKER-177] - Upgrade to maven-plugins version 25 to 26
   * [MINVOKER-178] - Make invoker copy support symlinks
   * [MINVOKER-179] - Upgrade to maven-plugins parent version 27
   * [MINVOKER-181] - Create single summary file
   * [MINVOKER-184] - Implement IT in an other way.
   * [MINVOKER-186] - Filter other files except pom like .mvn/extensions.xml

Closes #35.

--- a/pom.xml
+++ b/pom.xml
@@ -887,6 +887,12 @@
                         </excludes>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <!-- We just declare which plugin version to use. Each project can have then its own settings -->
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-invoker-plugin</artifactId>
+                    <version>1.10</version>
+                </plugin>
 
             </plugins>
         </pluginManagement>
