--- a/pom.xml
+++ b/pom.xml
@@ -893,6 +893,12 @@
                     <artifactId>maven-invoker-plugin</artifactId>
                     <version>1.10</version>
                 </plugin>
+                <plugin>
+                    <!-- We just declare which plugin version to use. Each project can have then its own settings -->
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.10.3</version>
+                </plugin>
 
             </plugins>
         </pluginManagement>
