--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
 
     <properties>
         <!-- elasticsearch stack -->
-        <elasticsearch.version>1.5.0</elasticsearch.version>
+        <elasticsearch.version>1.5.2-SNAPSHOT</elasticsearch.version>
 
         <!-- libraries -->
         <lucene.version>4.10.4</lucene.version>
