--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,8 @@
 
         <!-- libraries -->
         <lucene.version>5.2.0</lucene.version>
-        <lucene.maven.version>5.2.0-snapshot-1674576</lucene.maven.version>
+        <lucene.snapshot.revision>1675100</lucene.snapshot.revision>
+        <lucene.maven.version>5.2.0-snapshot-${lucene.snapshot.revision}</lucene.maven.version>
         <testframework.version>2.1.14</testframework.version>
         <jackson.version>2.5.1</jackson.version>
         <slf4j.version>1.6.2</slf4j.version>
@@ -100,7 +101,7 @@
         <repository>
             <id>lucene-snapshots</id>
             <name>Lucene snapshots</name>
-            <url>https://download.elasticsearch.org/lucenesnapshots/1674576</url>
+            <url>https://download.elasticsearch.org/lucenesnapshots/${lucene.snapshot.revision}</url>
         </repository>
         <repository>
             <id>oss-snapshots</id>
