--- a/pom.xml
+++ b/pom.xml
@@ -805,7 +805,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <execute/>
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
