Fix to let eclipse ignore the antigun plugin in it's maven integration This plugin should be ignored as it will make the internal eclipse build fail when there are NOCOMMIT comments in files, which are expected during feature development. This change only affects eclipse users and only when they are using the m2e eclipse integration

--- a/pom.xml
+++ b/pom.xml
@@ -806,7 +806,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <execute/>
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
