Add maven-checkstyle-plugin to 2.15
```xml
<plugin>
 <groupId>org.apache.maven.plugins</groupId>
 <artifactId>maven-checkstyle-plugin</artifactId>
 <version>2.15</version>
</plugin>
```

Release Notes - Apache Maven Checkstyle Plugin - Version 2.15

Bug

* [MCHECKSTYLE-288] NullPointerException during building a multi-module project
* [MCHECKSTYLE-250] NPE on tying to load LICENSE.txt resource from non-jar plugin dependencies

Improvement

* [MCHECKSTYLE-286] Add info on ruleset used in console output
* [MCHECKSTYLE-261] Upgrade to Checkstyle 6.1.1

Task

* [MCHECKSTYLE-277] Require Java 6
* [MCHECKSTYLE-273] Remove Turbine configuration since it is not used any more

Closes #36.
(cherry picked from commit c326049)

--- a/pom.xml
+++ b/pom.xml
@@ -919,7 +919,11 @@
                     <artifactId>maven-verifier-plugin</artifactId>
                     <version>1.1</version>
                 </plugin>
-
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-checkstyle-plugin</artifactId>
+                    <version>2.15</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
