Add elasticsearch repository
When writing a plugin for elasticsearch, it could potentially depend on Shield or any other library which is only released in [elasticsearch releases repository](http://maven.elasticsearch.org/releases).

As explained in [Shield documentation](http://www.elastic.co/guide/en/shield/current/_java_clients.html), Java users might need to add `elasticsearch-releases` to their repositories in `pom.xml`:

```xml
     <repository>
         <id>elasticsearch-releases</id>
         <url>http://maven.elasticsearch.org/releases</url>
         <releases>
            <enabled>true</enabled>
         </releases>
         <snapshots>
            <enabled>false</enabled>
         </snapshots>
      </repository>
```

Adding this repository in parent project would make that even easier for projects depending on elasticsearch-parent.

Closes #38.
(cherry picked from commit 146f1f0)

--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,16 @@
 
     <repositories>
         <repository>
+            <id>elasticsearch-releases</id>
+            <url>http://maven.elasticsearch.org/releases</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
             <id>codehaus-snapshots</id>
             <name>Codehaus Snapshots</name>
             <url>http://repository.codehaus.org/</url>
