--- a/dev-tools/pom.xml
+++ b/dev-tools/pom.xml
@@ -3,6 +3,7 @@
   <groupId>org.elasticsearch</groupId>
   <artifactId>dev-tools</artifactId>
   <version>2.0.0-SNAPSHOT</version>
+  <name>Elasticsearch Build Resources</name>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
