--- a/dev-tools/pom.xml
+++ b/dev-tools/pom.xml
@@ -10,6 +10,7 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-remote-resources-plugin</artifactId>
         <version>1.5</version>
         <executions>
