--- a/pom.xml
+++ b/pom.xml
@@ -451,6 +451,32 @@
     </dependencyManagement>
 
     <build>
+          <resources>
+              <resource>
+                  <directory>src/main/resources</directory>
+                  <filtering>true</filtering>
+                  <includes>
+                      <include>**/*.properties</include>
+                  </includes>
+              </resource>
+          </resources>
+
+          <testResources>
+              <testResource>
+                  <directory>src/test/java</directory>
+                  <includes>
+                      <include>**/*.json</include>
+                      <include>**/*.txt</include>
+                  </includes>
+              </testResource>
+              <testResource>
+                  <directory>src/test/resources</directory>
+                  <includes>
+                      <include>**/*.*</include>
+                  </includes>
+              </testResource>
+          </testResources>
+
           <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
