--- a/dev-tools/pom.xml
+++ b/dev-tools/pom.xml
@@ -4,6 +4,11 @@
   <artifactId>dev-tools</artifactId>
   <version>2.0.0-SNAPSHOT</version>
   <name>Elasticsearch Build Resources</name>
+  <parent>
+      <groupId>org.sonatype.oss</groupId>
+      <artifactId>oss-parent</artifactId>
+      <version>7</version>
+  </parent>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
