--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
 
         <!-- Build resources properties -->
         <elasticsearch.tools.directory>${project.build.directory}/dev-tools</elasticsearch.tools.directory>
+        <elasticsearch.assembly.descriptor>${basedir}/src/main/assemblies/plugin.xml</elasticsearch.assembly.descriptor>
+        <elasticsearch.assembly.appendId>false</elasticsearch.assembly.appendId>
 
         <!-- Test properties -->
         <tests.jvms>auto</tests.jvms>
@@ -758,10 +760,10 @@
                     <artifactId>maven-assembly-plugin</artifactId>
                     <version>2.5.4</version>
                     <configuration>
-                        <appendAssemblyId>false</appendAssemblyId>
+                        <appendAssemblyId>${elasticsearch.assembly.appendId}</appendAssemblyId>
                         <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                         <descriptors>
-                            <descriptor>${basedir}/src/main/assemblies/plugin.xml</descriptor>
+                            <descriptor>${elasticsearch.assembly.descriptor}</descriptor>
                         </descriptors>
                     </configuration>
                     <executions>
