add plugin POM, to move dependencies on ES core/tests and plugin-specific stuff to

--- a/pom.xml
+++ b/pom.xml
@@ -1154,5 +1154,6 @@
     </profiles>
     <modules>
         <module>dev-tools</module>
+        <module>plugins</module>
     </modules>
 </project>
