skip validation for -Pdev

--- a/pom.xml
+++ b/pom.xml
@@ -1153,6 +1153,9 @@
         </profile>
         <profile>
             <id>dev</id>
+            <properties>
+                <validate.skip>true</validate.skip>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
